# gates

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Cargo.toml  Ideas.md  README.md  default.nix
objects/: Ring_27.mtl
src/: AmbientOcclusion.cpp  AmbientOcclusion.h  Camera.cpp  Camera.h  Clouds.cpp  Clouds.h  DeferredShading.cpp  DeferredShading.h  Grass.cpp  Grass.h  ImprovedPerlinNoise.cpp  ImprovedPerlinNoise.h  ModelLoader.cpp  ModelLoader.h  Noise.cpp  Noise.h  NoiseType.h  PerlinNoise.cpp  PerlinNoise.h  Portal.cpp  Portal.h  Quad.cpp  Quad.h  Shader.cpp  Shader.h  SimplexNoise.cpp  SimplexNoise.h  Skydome.cpp  Skydome.h  Terrain.cpp  Terrain.h  Texture.cpp  Texture.h  WorleyNoise.cpp  WorleyNoise.h  camera.cpp  camera.h  inputCallback.cpp  inputCallback.h  keyCallback.cpp  (+2 more)
src/shader/: ambientBlur.fs  ambientOcclusion.fs  ambientOcclusion.vs  clouds.fs  clouds.gs  clouds.vs  deferredShading.fs  gBuffer.fs  gBuffer.vs  grass.fs  grass.gs  grass.vs  main.fs  main.vs  quad.fs  quad.vs  skydome.fs  skydome.vs  terrain.fs  terrain.tcs  terrain.tes  terrain.vs  triangle.fs  triangle.vs
